--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,107 +1,93 @@
 :root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
+body {
+  max-width: 40em;
+  margin: 0 auto;
+  padding: 5px;
+  font-family: Georgia, serif;
+  font-size: 18px;
+  line-height: 1.6em;
+  color: white;
+  background-color: black;
 }
 
-* {
-  box-sizing: border-box;
-  padding: 0;
+h2, h3 {
+  font-family: sans-serif;
+  font-weight: normal;
+}
+
+h1 {
+  font-family: sans-serif;
+  font-weight: bold;
+}
+
+/* General links */
+a {
+  text-decoration: none;
+  transition: color 0.3s;
+}
+
+/* Navbar links */
+header a {
+  color: white;
+}
+
+header a:hover, header a.active{
+  font-weight: bold;
+}
+
+/* Content links */
+a:not(header a) {
+  color: #999;
+}
+
+a:hover:not(header a) {
+  color: white;
+}
+
+nav a {
+  padding-right: 19px;
+}
+
+/* ProjectCard */
+.project-card {
+  margin-bottom: 0.5em;
+}
+
+.project-card-header {
+  display: flex;
+  justify-content: space-between;
+}
+
+.project-card h3, .project-card time, .project-card p {
   margin: 0;
 }
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+/* PostCard */
+.post-card {
+  margin-bottom: 0.5em;
+  display: flex;
+  justify-content: space-between;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.post-card p {
+  margin: 0;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+/* Homepage */
+
+.home-section {
+  margin-top: 2em;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+.header-lasts {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 1em;
+}
+
+.header-lasts h3 {
+  margin: 0;
+
 }
