--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,21 @@
+@font-face {
+    font-family: 'SauceCodePro NF';
+    src: url('utils/fonts/SauceCodeProNF-Bold.woff2') format('woff2'),
+        url('utils/fonts/SauceCodeProNF-Bold.woff') format('woff');
+    font-weight: bold;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'SauceCodePro NF';
+    src: url('utils/fonts/SauceCodeProNF.woff2') format('woff2'),
+        url('utils/fonts/SauceCodeProNF.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
 :root {
 }
 
@@ -5,7 +23,7 @@ body {
   max-width: 40em;
   margin: 0 auto;
   padding: 5px;
-  font-family: Georgia, serif;
+  font-family: SauceCodePro NF, monospace;
   font-size: 18px;
   line-height: 1.6em;
   color: white;
